# distributed-computing-MSc-course

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
executables/: CMakeLists.txt  main.cpp  monte_carlo_pi.cpp
executables/milestone01/: CMakeLists.txt  main.cpp
executables/milestone01/include/: main.h
executables/milestone02/: CMakeLists.txt  lattice-boltzman-class.cpp  main.cpp
executables/milestone02/includes/: lattice-boltzman-class.hpp
executables/milestone03/: CMakeLists.txt  lattice-boltzman-class.cpp  main.cpp
executables/milestone03/includes/: lattice-boltzman-class.hpp  main.hpp
src/: CMakeLists.txt  density_calculation.cpp  density_functions.cpp  equilibrium_distribution_calculation.cpp  lattice-boltzman-class.cpp  lattice_boltzman_class.cpp  lattice_boltzman_impl.cpp  lattice_boltzmann_class.cpp  lattice_boltzmann_impl.cpp  local_velocity_calculation.cpp  output_functions.cpp  streaming_step.cpp
src/includes/: density_calculation.hpp  direction_definitions.hpp  equilibrium_distribution_calculation.hpp  lattice-boltzman-class.hpp  local_velocity_calculation.hpp  streaming_step.hpp
src/includes/private/: density_functions.hpp  lattice_boltzman_impl.hpp  lattice_boltzmann_impl.hpp
src/includes/public/: direction_definitions.hpp  lattice_boltzmann_class.hpp  output_functions.hpp
tests/: CMakeLists.txt  milestone02.cpp  milestone03.cpp  test_streaming_step.cpp
tools/milestone02/: plot.py
tools/plotting/: distribution_plot.py
